--- a/views/me/stored-courses.ejs
+++ b/views/me/stored-courses.ejs
@@ -3,6 +3,9 @@
 
 <head>
     <% include ../elements/header %>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+            integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
 </head>
 
 <body>
@@ -20,20 +23,69 @@
             </thead>
             <tbody>
                 <% courses.forEach(function(courses, index) { %>
-                <tr>
-                    <th scope="row"><%= index+1 %></th>
-                    <td><%= courses.name %></td>
-                    <td><%= courses.author %></td>
-                    <td><%= courses.createdAt %></td>
-                    <td>
-                        <a href="/courses/<%= courses._id %>/edit" class="btn btn-link">Update</a>
-                        <a href="" class="btn btn-link">Delete</a>
-                    </td>
-                </tr>
-                <% }); %>
+                    <tr>
+                        <th scope="row">
+                            <%= index+1 %>
+                        </th>
+                        <td>
+                            <%= courses.name %>
+                        </td>
+                        <td>
+                            <%= courses.author %>
+                        </td>
+                        <td>
+                            <%= courses.createdAt %>
+                        </td>
+                        <td>
+                            <a href="/courses/<%= courses._id %>/edit" class="btn btn-primary">Update</a>
+                            <a href="" type="button" class="btn btn-danger" data-toggle="modal" data-id="<%= courses._id %>" data-target="#delete-course-modal">Delete</a>
+                        </td>
+                    </tr>
+                    <% }); %>
             </tbody>
         </table>
     </div>
+    <!-- Confirm Delete Course -->
+
+    <!-- Modal -->
+    <div class="modal fade" id="delete-course-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Delete Course?</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <p>DELETE COURSE!</p>
+                </div>
+                <div class="modal-footer">
+                    <button id="btn-delete-course" type="button" class="btn btn-danger">Yes Delete</button>
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+   
+    <% include ../elements/script %>
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            var courseId;
+            $('#delete-course-modal').on('show.bs.modal', function (event) {
+                var button = $(event.relatedTarget);
+                var courseId = button.data('id');
+                console.log(courseId);
+            });
+            var btnDeleteCourse = document.getElementById('btn-delete-course')
+            btnDeleteCourse.onclick = function() {
+                alert(courseId)
+            }
+        });
+
+        
+    </script>
 </body>
 
 </html>
