--- a/views/register/content.ejs
+++ b/views/register/content.ejs
@@ -13,28 +13,20 @@
                 <div class="login-alert">
 
                 </div>
-                <form action="" id="login">
+                <form action="" id="reg-form">
                     <h6>Email or Username</h6>
                     <input id="username" name="username" type="text" placeholder="Username">
                     <h6>Password</h6>
                     <input id="password" type="password">
-                    <button type="submit" value="Submit Form" class="btn btn-info form-submit" id="form-submit" placeholder="Password">Sign in</button>
+                    <button type="submit" value="Submit Form" class="btn btn-info form-submit" id="form-submit" placeholder="Password">Create</button>
                 </form>
                 <div class="sign-in-left-mid">
                     <a href="#">Forgot password?</a>
                     <a href="#">Sign in with company or school</a>
                 </div>
                 <div class="create">
-                    <button onclick="window.location.href='/register'" type="button" class="btn btn-secondary">Create an account</button>
+                    <button type="button" class="btn btn-secondary" onclick="window.location.href='/login'">Login</button>
                 </div>
-                <!-- <div class="footer">
-                <p>Copyright © 2020 - 2021 CodeEveryDay LLC. All rights reserved</p>
-                <p>
-                    <a href="#"><u>Terms of Use</u></a>
-                    &verbar;
-                    <a href="#"><u>Privacy Policy</u></a>
-                </p>
-            </div> -->
             </div>
             <div class="col-lg-3 col-md-2 col-sm-0 col-xm-0  sign-in-right">
 
