--- a/views/me/stored-courses.ejs
+++ b/views/me/stored-courses.ejs
@@ -18,7 +18,7 @@
                     <th scope="col">Course Name</th>
                     <th scope="col">Author</th>
                     <th scope="col">Thời gian tạo</th>
-                    <th scope="col"></th>
+                    <th scope="col">Update or Delete</th>
                 </tr>
             </thead>
             <tbody>
@@ -68,6 +68,16 @@
             </div>
         </div>
     </div>
+    <div style="text-align: center;" class="add-course">
+        <a href="/courses/create" class="btn btn-info">
+            Thêm khóa học
+        </a>
+    </div>
+    <div style="text-align: center; margin: 30px 0;" class="add-course">
+        <a href="/courses" class="btn btn-warning">
+            Xem tất cả khóa học
+        </a>
+    </div>
    
     <% include ../elements/script %>
     <script>
@@ -84,7 +94,6 @@
             }
         });
 
-        
     </script>
 </body>
 
